--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<a href="https://youtu.be/dQw4w9WgXcQ">Click this link, only for Great light students</a>
+
 </body>
 </html>
